[tool.poetry]
name = "comtrade-analysis"
version = "0.1.0"
description = ""
authors = ["Louisa Müller <louisa.mlr96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyyaml = "^6.0.1"
pandas = "^2.1.4"
comtradeapicall = "^1.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
